--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ h1 a {
   font-family: 'Format_1452';
   color: #ffffff;
   text-decoration: none;
+  margin-right: 100px;
 }
 h1 a:hover { color: #ffffaa; }
 
@@ -56,11 +57,13 @@ a { color: #ffffff; }
 a:hover { color: #ffffaa; }
 img { width: 100%; height: auto; }
 
-.contact_icons {
-  display: flex;
+.header_icons {
   gap: 20px;
+  display: flex;
+  margin-top: 10px;
 }
 .header_icon {
+  /* padding-top: 10px; */
   width: 50px;
   height: auto;
   color: #ffffff;
@@ -90,12 +93,13 @@ img { width: 100%; height: auto; }
 header {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
   padding: 10px 10px;
-
+  /* background-color: #aaff00; NICE COLOR */
   margin: -10px;
   margin-bottom: 10px;
+
+  justify-content: space-between;
 }
 
 .article_container {
@@ -110,16 +114,8 @@ header {
 
 /* Monitor */
 @media only screen and (min-width: 1000px) {
-        header{
-            display: flex;
-            flex-wrap: wrap;
-            column-gap: 100px;
-            /* justify-content: space-between; */
-            align-items: center;
-            padding: 10px 10px;
-
-            margin: -10px;
-            margin-bottom: 10px;
+        .header_icons {
+          margin-top: 0px;
         }
         .article_container {
             display: grid;
