--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ================= TEXT ================= */
 @font-face {
   font-family: 'Roboto-Light';
   src: url('https://zodiacfra.github.io/ZodiacFRA/fonts/Roboto-Light.ttf') format("truetype");
@@ -6,7 +7,6 @@
   font-family: 'Format_1452';
   src: url('https://zodiacfra.github.io/ZodiacFRA/fonts/Format_1452.otf') format("opentype");
 }
-
 * { box-sizing: border-box; }
 body {
   font-family: 'Roboto-Light';
@@ -14,20 +14,13 @@ body {
   margin: 20px;
   color: #ffffff;
 }
-
 h1 {
   margin: 0px;
   font-size: 100px;
   font-family: 'Format_1452';
 }
-h1 a {
-  margin: 0px;
-  font-size: 100px;
-  font-family: 'Format_1452';
-  text-decoration: none;
-}
+h1 a { text-decoration: none; }
 h1 a:hover { color: #ffffaa; }
-
 h2 {
   border-top: 1px solid white;
   font-size: 36px;
@@ -35,24 +28,23 @@ h2 {
   margin: 0px;
   padding-top: 20px;
 }
-
+h2 a { text-decoration: none; }
 h3 {
   font-size: 20px;
   color: #757b80;
   margin: 0px;
 }
-
 h4 {
   font-size: 15px;
   color: #757b80;
   margin: 0px;
 }
-
 p { font-size: 20px; }
 a { color: #ffffff; }
 a:hover { color: #ffffaa; }
 img { width: 100%; height: auto; }
 
+/* ================= VIDEO ================= */
 .video_container {
   position: relative;
   overflow: hidden;
@@ -69,6 +61,21 @@ img { width: 100%; height: auto; }
   height: 100%;
 }
 
+/* ================= DYNAMIC LINES ================= */
+#line_container {
+  width: 130%;
+  position: sticky;
+  top: 100px;
+  mix-blend-mode: difference;
+}
+.line {
+  position: inherit;
+  width: 100%;
+  height: 0px;
+  background: white;
+}
+
+/* ================= HEADER ================= */
 header {
   display: flex;
   flex-wrap: wrap;
@@ -80,16 +87,6 @@ header {
   margin: -10px;
   margin-bottom: 10px;
 }
-
-.centered_title {
-  font-size: 40px;
-  height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center
-}
-
 .header_icons {
   gap: 20px;
   display: flex;
@@ -104,6 +101,17 @@ header {
   filter: brightness(0) saturate(100%) invert(89%) sepia(31%) saturate(425%) hue-rotate(6deg) brightness(107%) contrast(103%);
 }
 
+/* ================= CONTACT TEXT ================= */
+.centered_title {
+  font-size: 40px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center
+}
+
+/* ================= MAIN LAYOUT ================= */
 .article_container {
   display: grid;
   margin-bottom: 20px;
@@ -113,6 +121,7 @@ header {
   margin-right: 20px;
   position: static;
 }
+
 
 /* Responsive Non-Smartphone */
 @media only screen and (min-width: 1000px) {
