--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1 {
   margin: 0px;
   font-size: 100px;
   font-family: 'Format_1452';
+  font-weight: 100;
 }
 h1 a { text-decoration: none; }
 h1 a:hover { color: #ffffaa; }
@@ -27,6 +28,7 @@ h2 {
   font-family: 'Format_1452';
   margin: 0px;
   padding-top: 20px;
+  font-weight: 100;
 }
 h2 a { text-decoration: none; }
 h3 {
