--- a/style.css
+++ b/style.css
@@ -7,28 +7,29 @@
   font-family: 'Format_1452';
   src: url('https://zodiacfra.github.io/ZodiacFRA/fonts/Format_1452.otf') format("opentype");
 }
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+  font-weight: 100;
+}
 body {
   font-family: 'Roboto-Light';
+  color: #ffffff;
   background-color: #181a1b;
   margin: 20px;
-  color: #ffffff;
 }
 h1 {
-  margin: 0px;
-  font-size: 100px;
   font-family: 'Format_1452';
-  font-weight: 100;
+  font-size: 100px;
+  margin: 0px;
 }
 h1 a { text-decoration: none; }
 h1 a:hover { color: #ffffaa; }
 h2 {
-  border-top: 1px solid white;
-  font-size: 36px;
   font-family: 'Format_1452';
+  font-size: 36px;
+  border-top: 1px solid white;
   margin: 0px;
-  padding-top: 24px;
-  font-weight: 100;
+  padding-top: 20px;
 }
 h2 a { text-decoration: none; }
 h3 {
@@ -67,13 +68,27 @@ img { width: 100%; height: auto; }
 #line_container {
   width: 130%;
   position: sticky;
-  top: 100px;
+  top: 0px;
+  mix-blend-mode: difference;
+}
+#floating_line_container {
+  width: 28%;
+  position: absolute;
+  top: 0px;
+  /* left: 0px; */
+  pointer-events: none;
   mix-blend-mode: difference;
 }
 .line {
   position: inherit;
   width: 100%;
   height: 0px;
+  background: white;
+}
+.vertical_line {
+  position: inherit;
+  width: 10%;
+  /* height: 200px; */
   background: white;
 }
 
@@ -85,9 +100,9 @@ header {
   justify-content: space-between;
 
   padding: 10px 10px;
-  /* background-color: #aaff00; NICE COLOUR */
   margin: -10px;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
+  /* background-color: #aaff00; NICE COLOUR */
 }
 .header_icons {
   gap: 20px;
@@ -95,7 +110,7 @@ header {
   margin-top: 10px;
 }
 .header_icon {
-  width: 50px;
+  width: 56px;
   height: auto;
   color: #ffffff;
 }
@@ -110,7 +125,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  align-content: center
+  align-content: center;
+  mix-blend-mode: difference;
 }
 
 /* ================= MAIN LAYOUT ================= */
@@ -124,24 +140,15 @@ header {
   position: static;
 }
 
+/* ================= PROJECT LAYOUT ================= */
 
-/* Responsive Non-Smartphone */
+
+/* ================= LAPTOP SPECIFIC LAYOUT ================= */
 @media only screen and (min-width: 1000px) {
-  .centered_title {
-    font-size: 100px;
-  }
-  .header_icons {
-    margin-top: 0px;
-  }
-  .article_container {
-      display: grid;
-      margin-bottom: 20px;
-      grid-template-columns: 2.5fr 1.5fr 4fr;
-  }
+  .centered_title { font-size: 100px; }
+  .header_icons { margin-top: 0px; }
+  .article_container { grid-template-columns: 2.5fr 1.5fr 4fr; }
   .article_text {
-    /* flex-grow: 2.5; */
-    margin-bottom: 20px;
-    margin-right: 20px;
     height: 180px;
 
     position: -webkit-sticky;
